--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -10,5 +10,10 @@ ADD . /app
 # Install the dependencies
 RUN pip install -r requirements.txt
 
+# Create a uwsgi log directory and files
+RUN mkdir /var/log/uwsgi
+RUN touch /var/log/uwsgi/uwsgi_access.log
+RUN touch /var/log/uwsgi/uwsgi_error.log
+
 # run the command to start uWSGI
 CMD ["uwsgi", "app.ini"]
