--- a/flask/app.ini
+++ b/flask/app.ini
@@ -8,3 +8,6 @@ master = true
 chmod-socket = 660
 vacuum = true
 die-on-term = true
+logger = file:/var/log/uwsgi/uwsgi_error.log
+logformat = [%(ctime)] %(proto) %(status) %(method) %(uri)
+req-logger = file:/var/log/uwsgi/uwsgi_access.log
