--- a/flask/app.ini
+++ b/flask/app.ini
@@ -9,5 +9,5 @@ chmod-socket = 660
 vacuum = true
 die-on-term = true
 logger = file:/var/log/uwsgi/uwsgi_error.log
-logformat = [%(ctime)] %(proto) %(status) %(method) %(uri)
+; logformat = [%(ctime)] %(proto) %(status) %(method) %(uri)
 req-logger = file:/var/log/uwsgi/uwsgi_access.log
